<resources>
    <string name="app_name">Football League</string>
    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string name="league_description">League Description</string>
    <string name="league_badge">League Badge</string>
    <string name="league_fanart">League Fan Art</string>
    <string name="tab_previous">Previous Match</string>
    <string name="tab_next">Next Match</string>
    <string name="date_event">Date Event</string>
    <string name="home_team">Home Team</string>
    <string name="vs">-</string>
    <string name="away_team">Away Team</string>
    <string name="home_goal">Home Goal Details</string>
    <string name="goals">Goals</string>
    <string name="away_goal">Away Goal Details</string>
    <string name="stats">STATS</string>
    <string name="home_shots">Home Shots</string>
    <string name="away_shots">Away Shots</string>
    <string name="shots">Shots</string>
    <string name="home_yellow">Home Yellow Cards</string>
    <string name="yellow">Yellow Cards</string>
    <string name="away_yellow">Away Yellow Cards</string>
    <string name="home_red">Home Red Cards</string>
    <string name="red">Red Cards</string>
    <string name="away_red">Away Red Cards</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Match</string>
    <string name="teams">Teams</string>
    <string name="league_est">Est. Year</string>
    <string name="favorites">Favorites</string>
    <string name="leagues">Leagues</string>
    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
</resources>