<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EventDetailsActivity">

    <ProgressBar
        android:id="@+id/progress_bar_event"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/league_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/league_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/date_event" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_team"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/vs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/away_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/away_team"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f4f4f4"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                android:elevation="8dp">

                <TextView
                    android:id="@+id/home_goal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_gravity="start"
                    android:text="@string/home_goal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/goals"/>

                <TextView
                    android:id="@+id/away_goal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:text="@string/away_goal"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/stats"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f4f4f4"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                android:elevation="8dp">

                <TextView
                    android:id="@+id/home_shot"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_gravity="start"
                    android:text="@string/home_shots"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/shots"/>

                <TextView
                    android:id="@+id/away_shot"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:text="@string/away_shots"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f4f4f4"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                android:elevation="8dp">

                <TextView
                    android:id="@+id/home_yellow"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_gravity="start"
                    android:text="@string/home_yellow"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/yellow"/>

                <TextView
                    android:id="@+id/away_yellow"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:text="@string/away_yellow"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f4f4f4"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                android:elevation="8dp">

                <TextView
                    android:id="@+id/home_red"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_gravity="start"
                    android:text="@string/home_red"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/red"/>

                <TextView
                    android:id="@+id/away_red"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:text="@string/away_red"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>