<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="9dp"
    app:cardElevation="3dp"
    android:padding="6dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:layout_marginTop="3dp"
    android:layout_marginStart="3dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="5dp" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="64dp" >

        <TextView
            android:id="@+id/date_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/date_event"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/home_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_team"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/vs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/away_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/away_team"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>